--- a/css/style-old.css
+++ b/css/style-old.css
@@ -1,7 +1,12 @@
+#background {    
+    background-color:darkslategrey;
+}
+
 #app {
     text-align: center;
     width: 800px;
     margin: auto;
+    background-color: darkgray;
 }
 
 .characters{
